src/components/ModulosEducacionais_big/ModulosEducacionais_big.scss
@import "../../variables";

.modulosBig {
  h3 {
    margin-bottom: 2rem;
    font-size: 2.2rem;
    color: $red-ligh;
  }
  .modulosBig-categorias {
    flex-direction: row;
    text-align: center;
    margin: 2rem 0rem;
    display: flex;
    button {
      font-size: clamp(0.1rem, 0.1rem + 1vw, 1.4rem);
      background-color: transparent;
      width: fit-content;
      text-wrap: nowrap;
      cursor: pointer;
    }
  }
  .modulosBig-resultados {
    display: inline-block;
    margin-left: 0.4rem;
    margin-bottom: 1rem;
    text-align: left;
  }
  .modulosBig-container {
    grid-template-columns: repeat(3, 1fr);
    padding: 0rem 0.4rem;
    list-style: none;
    display: grid;
    gap: 1.5rem;
    width: 90%;
    .modulosBig-items {
      text-decoration: none;
      margin-bottom: 1rem;
      position: relative;
      .modulosBig-items-img {
        border-radius: 1rem;
      }
      .modulosBig-items-titulo {
        font-size: clamp(0.1rem, 0.4rem + 1vw, 1.4rem);
        margin: 0.2rem 0rem;
        color: $ui-darkest;
        text-align: left;
      }
      .modulosBig-items-parceiros {
        display: inline-block;
        margin: 0.2rem 0rem;
        text-align: left;
        color: $red-ligh;
        font-size: 1rem;
      }
      .modulosBig-items-estatisticas {
        display: inline-block;
        margin: 0.2rem 0rem;
        text-align: justify;
        color: $ui-darkest;
        text-wrap: nowrap;
        .modulosBig-items-matriculados {
          img {
            margin-right: 0.2rem;
            width: 1rem;
          }
        }
        .modulosBig-items-duracao {
          img {
            margin-right: 0.2rem;
            margin-left: 0.4rem;
            width: 1rem;
          }
        }
        .modulosBig-items-avaliacao {
          img {
            margin-right: 0.2rem;
            margin-left: 0.4rem;
            width: 1rem;
          }
        }
      }
      .modulosBig-items-objetivogeral {
        background-color: transparent;
        color: $ui-darkest;
        max-height: 5rem;
        text-align: left;
        overflow: hidden;
      }
    }
    .modulosBig-verModulo {
      box-shadow: 0px -20px 10px 12px rgba(255, 255, 255, 1);
      background-color: $ui-grey;
      padding: 0.2rem 0.2rem;
      position: absolute;
      border-radius: 3rem;
      color: $ui-lightest;
      font-size: 1rem;
      cursor: pointer;
      bottom: -1rem;
      width: auto;
      left: 0;
      right: 0;
    }
  }
  .modulosBig-paginacao {
    align-items: center;  
    margin-top: 1rem;
    display: flex;
    width: 6rem;
    button {
      background-color: $ui-light;
      border-radius: 100%;
      cursor: pointer;
      &:hover,
      &:focus-visible {
        background-color: $red-ligh;
      }
      img {
        filter: invert(360);
        border-radius: 100%;
        &:hover,
        &:focus-visible {
          filter: invert(0);
        }
      }
      span {
        padding: 2rem 0rem;
      }
    }
  }
}

